feat: 为“I'm Smoke-Free”项目添加应用图标并更新描述
- 在主项目页面和独立页面中添加应用图标展示
- 更新项目描述、标语和功能列表，强化核心信息
- 添加App Store直接链接，优化页面元信息和图标设置

--- a/im-smoke-free/index.html
+++ b/im-smoke-free/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>I'm Smoke-Free – Quit Instantly. Quit Forever.</title>
-    <meta name="description" content="I'm Smoke-Free is a minimalist quit-smoking companion built on one principle: Quit Instantly + Quit Forever. Track time, money saved, and science-based recovery milestones.">
+    <title>I'm Smoke-Free – The Last Pack You’ll Ever Buy</title>
+    <meta name="description" content="I'm Smoke-Free is built on Quit Instantly + Quit Forever. Track time, money saved, and science-based recovery milestones while you stay smoke-free.">
+    <link rel="icon" href="app-icon-512.jpg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="app-icon-512.jpg">
     <style>
         :root {
             --bg: #05070a;
@@ -88,6 +90,14 @@
             font-weight: 700;
             letter-spacing: 0.08em;
             font-size: 11px;
+            overflow: hidden;
+        }
+
+        .brand-mark img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         .brand-text {
@@ -337,14 +347,16 @@
     <div class="page">
         <header class="top-bar">
             <div class="brand">
-                <div class="brand-mark">ISF</div>
+                <div class="brand-mark">
+                    <img src="app-icon-512.jpg" alt="I'm Smoke-Free app icon">
+                </div>
                 <div class="brand-text">
                     <strong>I'M SMOKE-FREE</strong>
-                    <span>Quit Instantly · Quit Forever</span>
+                <span>The last pack you’ll ever buy</span>
                 </div>
             </div>
             <div class="top-links">
-                <span class="pill">11 years smoke-free · Real experience, not theory.</span>
+            <span class="pill">Quit Instantly + Quit Forever</span>
             </div>
         </header>
 
@@ -359,21 +371,21 @@
                     <p class="subline">
                         I failed to quit countless times. I even stayed smoke-free for six months once, only to relapse.
                         The breakthrough came when I closed every “gradual reduction” backdoor and committed to one rule:
-                        Quit Instantly. Quit Forever.
+                        Quit Instantly. Quit Forever. No excuses, no tapering, just a clean break.
                     </p>
 
                     <div class="quote">
                         <div class="quote-title">The Tobacco-Anchored Contract</div>
                         <div class="quote-body">
-                            No complex subscriptions. No vague promises. I'm Smoke-Free anchors its value to the habit
-                            you are leaving behind, turning your last pack into a line in the sand.
+                            No complex subscriptions. No vague promises. We anchor the app’s value to the habit you’re
+                            leaving behind, turning your last pack into a line in the sand.
                         </div>
                     </div>
 
                     <div class="hero-actions">
-                        <a class="btn" href="#features">
-                            Get the core method
-                            <span>Quit Instantly + Quit Forever</span>
+                        <a class="btn" href="https://apps.apple.com/us/app/im-smoke-free/id6757760009">
+                            View on the App Store
+                            <span>The last pack you’ll ever buy</span>
                         </a>
                         <a class="btn secondary" href="privacy.html">
                             Privacy policy
@@ -408,7 +420,7 @@
                         </li>
                         <li>
                             <span class="feature-label">Science-Based Health Milestones.</span>
-                            Inspired by WHO and long-term recovery data, follow the day-by-day recovery
+                            Based on long-term recovery data, follow the day-by-day recovery
                             of your heart, lungs, and senses.
                         </li>
                         <li>
@@ -428,10 +440,9 @@
                         </li>
                         <li>
                             <span class="feature-label">The Discipline (One Single Cigarette).</span>
-                            If you break your promise—even for a single puff—resetting your timer is designed
-                            to carry a small but meaningful cost (for example, the price of one cigarette
-                            or a short reflective ad). This minor friction is a psychological barrier that
-                            keeps you on the path when your willpower wavers.
+                            If you break your promise—even for a single puff—resetting your timer carries a small
+                            but meaningful cost (for example, the price of one cigarette or a brief reflective moment).
+                            This friction is designed to keep you on the path when willpower wavers.
                         </li>
                         <li>
                             <span class="feature-label">No Gradual Reduction.</span>
